# mdd-paradigm

./: .gitignore  README.md  main.spec  prt_idx_sequence.yaml  prt_sequence.yaml  pyproject.toml
GazeFollower/: setup.py
GazeFollower/example/: GetGazeDataFromVideo.py  HikrobotCamera.py  MyCalibration.py  MyCalibrationPsycho.py  MyModelTest.py  config_example.py  customized_camera_example.py  demo.csv  poly_calibration_example.py  psychopy_example.py  pygame_example.py  sampling.py
GazeFollower/gazefollower/: GazeFollower.py  version.py
GazeFollower/gazefollower/calibration/: Calibration.py  CalibrationController.py  SVRCalibration.py  __init__.py
GazeFollower/gazefollower/camera/: Camera.py  HikrobotCamera.py  WebCamCamera.py
GazeFollower/gazefollower/face_alignment/: FaceAlignment.py  MediaPipeFaceAlignment.py
GazeFollower/gazefollower/filter/: Filter.py  HeuristicFilter.py  OneEuroFilter.py
GazeFollower/gazefollower/gaze_estimator/: GazeEstimator.py  MGazeNetGazeEstimator.py
GazeFollower/gazefollower/logger/: Logger.py
GazeFollower/gazefollower/misc/: DefaultConfig.py  Enumeration.py  FaceInfo.py  GazeInfo.py  Recorder.py  __init__.py
GazeFollower/gazefollower/ui/: BaseUI.py  CalibrationUI.py  CameraPreviewerUI.py  ParticipantInfoDialog.py  (+2 more)
example/: Calibration.py  GetGazeDataFromVideo.py  sampling_with_saved_model.py
examples/: 2.xdf  example_go-nogo.py
psycho/: camera.py  lsl_recv.py  main.py  psychopy_doc.md  session.py  utils.py  xdf.py
psycho/analysis/: README.md  emotion_face.py  entry.py  prt.py  sret.py  utils.py
psycho/conf/: config.yaml  pilot.yaml
psycho/exps/: diat.py  emotion_face.py  emotion_stim.py  gng.py  iat.py  nback.py  prt.py  questionnaires.py  resting.py  sret.py
tests/: test_gen.py  test_misc.py  test_screen.py
(+63 files in other folders)
