[project]
name = "psycho"
version = "0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.9.1",
    "hydra-core>=1.3.2",
    "kaleido>=1.2.0",
    "mediapipe>=0.10.14",
    "mne>=1.10.2",
    "mne-nirs>=0.7.3",
    "mnn>=3.2.5",
    "neurokit2>=0.2.12",
    "opencv-python>=4.11.0.86",
    "plotly>=6.4.0",
    "polars>=1.34.0",
    "psychopy",
    "pygame>=2.6.1",
    "pylsl>=1.17.6",
    "pytest>=8.4.2",
    "pyxdf>=1.17.0",
    "scikit-learn>=1.7.2",
    "screeninfo>=0.8.1",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.3",
]

[tool.uv.sources]
psychopy = { path = "libs/psychopy-2025.2.0-py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
pythonpath = ["."]
